Remove created by

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
     <h3>operacje finansowe w Pythonie</h3>
 
     <p>
-        <small>Created by <a href="http://ociepka.info/">Michał Ociepka</a> / <a
+        <small><a href="http://ociepka.info/">Michał Ociepka</a> / <a
                 href="http://twitter.com/michalociepka">@michalociepka</a></small>
     </p>
 </section>
