Improve styles and math

--- a/_includes/decimal.html
+++ b/_includes/decimal.html
@@ -32,14 +32,14 @@ Context(
     </section>
     <section>
         <h2>Dlaczego decimal nie traci na wartości</h2>
-        <blockquote>
+        <p class="math-block big">
             $$W = m \times p^c$$
-        </blockquote>
+        </p>
         <ul>
-            <li>W - wartość liczby</li>
-            <li>m - mantysa</li>
-            <li>p - podstawa</li>
-            <li>c - cecha</li>
+            <li>$W$ - wartość liczby</li>
+            <li>$m$ - mantysa</li>
+            <li>$p$ - podstawa</li>
+            <li>$c$ - cecha</li>
         </ul>
         <aside class="notes">
             Zapis binarny jak i zapis dziesiętny sprowadza się do tego samego wzoru.
@@ -50,9 +50,11 @@ Context(
         <h2>Zapis liczby</h2>
         <pre><code>c = -1
 m = -1</code></pre>
-        <p class="math-block">
-            $$W = -1 \times 10^{-1}$$ <br/>
-            <span class="fragment">$$W = -0.1$$</span>
+        <p class="math-block fragment">
+            $$W = -1 \times 10^{-1}$$
+        </p>
+        <p class="math-block fragment">
+            $$W = -0.1$$
         </p>
         <pre class="fragment"><code>W = (1, 1, -1)</code></pre>
         <aside class="notes">
