--- a/css/wrocpy.css
+++ b/css/wrocpy.css
@@ -1,15 +1,15 @@
 @font-face {
 font-family: HurmeGeometricSans4;
-src: url("/fonts/HurmeGeometricSans4.otf") format("opentype");
+src: url("../fonts/HurmeGeometricSans4.otf") format("opentype");
 }
 
 @font-face {
 font-family: HurmeGeometricSans4-Black;
-src: url("/fonts/HurmeGeometricSans4 Black.otf") format("opentype");
+src: url("../fonts/HurmeGeometricSans4 Black.otf") format("opentype");
 }
 
 body {
-	background: #0c3350 url("/css/logo.png") no-repeat left bottom;
+	background: #0c3350 url("logo.png") no-repeat left bottom;
 	background-size: 20%;
 }
 
