--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 
 		<title>Operacje finansowe w Pythonie</title>
+        <link rel="shortcut icon" href="css/favicon.png" />
 
 		<meta name="description" content="Prezentacja na wroc.py o operacjach finansowych w Pythonie">
 		<meta name="author" content="Michał Ociepka">
