--- a/_includes/decimal.html
+++ b/_includes/decimal.html
@@ -56,6 +56,7 @@ m = -1</code></pre>
         <p class="math-block fragment">
             $$W = -0.1$$
         </p>
+        <pre class="fragment"><code>W = (znak, mantysa, cecha)</code></pre>
         <pre class="fragment"><code>W = (1, 1, -1)</code></pre>
         <aside class="notes">
             Dla liczb dziesiętnych podstawa będzie równa 10 a dla liczb binarnych dwa.
