--- a/_includes/django_prices.html
+++ b/_includes/django_prices.html
@@ -1,7 +1,8 @@
 <section>
     <section>
         <h2>Django prices</h2>
-        <ul>
+        <p><a href="https://github.com/mirumee/django-prices">https://github.com/mirumee/django-prices</a></p>
+        <ul class="fragment">
             <li>field oraz model field które działają na prices</li>
             <li>templatetagi do prostej manipulacji obiektem price w templateach</li>
             <li>integracja z biblioteką babel</li>
