--- a/_includes/thank_you.html
+++ b/_includes/thank_you.html
@@ -1,3 +1,7 @@
 <section data-background="#fff">
-    <img class="stretch" src="https://s3.amazonaws.com/media-p.slid.es/uploads/patrys/images/738003/38c04947816c3728038c4583489cb8bca31a03e1_1012086.png">
+    <p>
+        <a href="https://mirumee.com">https://mirumee.com</a><br/>
+        <a href="https://github.com/mirumee">https://github.com/mirumee</a>
+        <img class="" src="https://s3.amazonaws.com/media-p.slid.es/uploads/patrys/images/738003/38c04947816c3728038c4583489cb8bca31a03e1_1012086.png">
+    </p>
 </section>
