--- a/_includes/django_prices_openexchangerates.html
+++ b/_includes/django_prices_openexchangerates.html
@@ -1,7 +1,8 @@
 <section>
     <section>
-        <h2>django prices openexchange rates</h2>
-        <ul>
+        <h2>django prices openexchangerates</h2>
+        <p><a href="https://github.com/mirumee/django-prices-openexchangerates">https://github.com/mirumee/django-prices-openexchangerates</a></p></a></p>
+        <ul class="fragment">
             <li>synchronizacja kursu walut z openexchangerates.org</li>
             <li>proste api do przeliczania obiektów price</li>
             <li>templatetagi do prostej manipulacji obiektem price w templateach</li>
