--- a/_includes/thank_you.html
+++ b/_includes/thank_you.html
@@ -1,4 +1,4 @@
-<section data-background="#fff">
+<section data-background="#fff" data-transition="concave">
     <p>
         <a href="https://mirumee.com">https://mirumee.com</a><br/>
         <a href="https://github.com/mirumee">https://github.com/mirumee</a>
