--- a/_includes/django_prices_openexchangerates.html
+++ b/_includes/django_prices_openexchangerates.html
@@ -4,7 +4,7 @@
         <p><a href="https://github.com/mirumee/django-prices-openexchangerates">https://github.com/mirumee/django-prices-openexchangerates</a></p></a></p>
         <ul class="fragment">
             <li>synchronizacja kursu walut z openexchangerates.org</li>
-            <li>proste api do przeliczania obiektów price</li>
+            <li>proste API do przeliczania obiektów price</li>
             <li>templatetagi do prostej manipulacji obiektem price w templateach</li>
         </ul>
     </section>
