Remove some typos

--- a/_includes/decimal.html
+++ b/_includes/decimal.html
@@ -16,7 +16,7 @@ Context(
             Tak jak wspomniałem wcześniej standard IEEE floating points zawierał także specyfikacje
             dla artmetyki liczb dziesiętnych i właśnie ta specyfikacja została wdrożona w Pythonie.
 
-            A sami autory posłużyli się specyfikacją od IBM'a która to opisuje także metody które powinny być
+            Autory posłużyli się specyfikacją od IBM'a która to opisuje także metody które powinny być
             zaimplementowane.
         </aside>
     </section>
@@ -59,7 +59,7 @@ m = -2</code></pre>
         <pre class="fragment"><code>W = (1, 2, -1)</code></pre>
         <aside class="notes">
             Dla liczb dziesiętnych podstawa będzie równa 10 a dla liczb binarnych dwa.
-            Znając te założenia liczbę 0.1 możemy zapisać za pomocą liczb -1 oraz 1.
+            Znając te założenia liczbę 0.1 możemy zapisać za pomocą liczb -1 oraz 2.
 
             Chcąc zwiększyć ilość liczb które możemy zapisać w mantysie wyciągniemy znak do osobnego bitu.
         </aside>
