--- a/_includes/no_floats.html
+++ b/_includes/no_floats.html
@@ -15,10 +15,10 @@
                     Od najmłodszych lat wpajany jest nam system dziesiętny, zaczynamy liczyć na 10 palcach, niestety komputery działają w systemie binarnym.
                 </li>
                 <li>
-                    Niestety konsola pythona nie ułatwia nam zrozumienia problemu.
+                    Konsola pythona nie ułatwia nam zrozumienia problemu.
                 </li>
                 <li>
-                    Co tu właściwie zaszło? Konsola nas ztrolowała. Wpisując liczbę 0.1 a w pamięci binarny reprezentacja liczby 0.1 jest zupełnie inna.
+                    Co tu właściwie się stało? Konsola nas ztrolowała. Wypisała liczbę 0.1 a w pamięci przechowuje binarną reprezentację jest zupełnie inna.
                     Niestety przez konsolę wielu programistów pythona zapomina o tym problemie.
                 </li>
             </ul>
@@ -36,8 +36,8 @@ False</code></pre>
             się jak te liczby wyglądają w zapisie binarnym. Na język w tym przypadku ciśnie się zero.
             </p>
             <p>
-                W drugim przypadku aż ciśnie się na język odpowiedź true. Przecież o d podstawówki nam powtarzają
-            że mnożenie to tylko sktucenie dodawania.
+                W drugim przypadku aż ciśnie się na język odpowiedź true. Przecież od podstawówki nam powtarzają
+            że mnożenie to tylko skrócenie dodawania.
             </p>
         </aside>
     </section>
@@ -59,11 +59,11 @@ sys.float_info(
             <p>
             Ograniczona pamięć nie tyczy się tylko ułamków nie wymiernych ale większości ułamków dziesiętnych.
             Im większa precyzja która powiązana jest z liczbą pamięci tym mniejszy błąd. Jak wspomniałem wcześniej
-            precyzja floata w pythoonie to 53 czyli jest to podwójna precyzja.
+            precyzja floata w pythonie to 53 czyli jest to podwójna precyzja.
             </p>
             <p>
             Ciekawostką jest, że pierwszy standard floating points <b>IEEE 754</b> napisany w 1985r. zakładał możliwość
-            używania artmetyki liczb 2 i 10 ale dopiero w 2005 IBM skonstruował procesor z900 który żeczywiście
+            używania artmetyki liczb 2 i 10 ale dopiero w 2005 IBM skonstruował procesor z900 który rzeczywiście
             działał na liczbach dziesiętnych.
             </p>
         </aside>
