--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -18,7 +18,7 @@
         <li class="fragment stretch">Na deser Prices.</li>
     </ol>
     <aside class="notes">
-        W pierszej części prezentacji omówię dlaczego floaty nie nadają się do repraezetacji cen.
+        W pierszej części prezentacji omówię dlaczego floaty nie nadają się do obliczeniach cen.
         Następnym krokiem będzie omówienie w jaki sposób ratują nas Decimale i jakie problemy rozwiązują.
         I na deser kilka słów o dodatkowej abstrakcji która rozwiązuje problemy na najwyższej warstwie.
     </aside>
